style.css amedment fix footer alignment issue found after deployment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,10 @@ h3 {
     padding: 20px;
 }
 
+ul {
+    padding: 0px;
+}
+
 #addimageheader {
     font-size: 20px;
     font-weight: bold;
